--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div class="box">
+		<p class="para">This is a demo model try to replicate this box model
+		in HTML and Css and try to pass all the test cases.</p>
+	</div>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
