--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
     <div class="box">
-		<p class="para">This is a demo model try to replicate this box model
-		in HTML and Css and try to pass all the test cases.</p>
+		<p class="para">This is a demo of model try to replicate this box model
+		in Html and Css and try to pass all the test cases.</p>
 	</div>
 	
 	<script type="text/javascript" src="./script.js">
